[project]
name = "lta-datamall-bus-backend"
version = "0.1.0"
description = "FastAPI backend platform for LTA DataMall Bus Transport APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "gunicorn==23.0.0",
  "httpx==0.28.1",
  "valkey==6.1.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "pytest==8.4.1",
]

[tool.uv]
package = false
